kubernetes/overlays/infrastructure/kube-cbr/applications/external-secrets/network-policies/allow-remote-node.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: remote-node-allow
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  ingress:
  - fromEntities:
    - remote-node
